--- a/components/esp_menu/CMakeLists.txt
+++ b/components/esp_menu/CMakeLists.txt
@@ -1,35 +1,30 @@
 cmake_minimum_required(VERSION 3.16)
 
-# ESP Menu Component
-set(COMPONENT_SRCS 
-    "src/esp_menu.c" 
+# Source list with generated menu support
+set(srcs
+    "src/esp_menu.c"
     "assets/user_actions.c"
     "assets/user_graphic.c"
     "generated/menu.c"
 )
 
-set(COMPONENT_ADD_INCLUDEDIRS 
-    "include" 
-    "generated"
+set(requires
+    "lvgl"
+    "esp_lvgl_port" 
+    "esp_driver_gpio"
+    "driver"
+    "esp_lcd"
+    "button"
+    "knob"
+    "nvs_flash"
 )
 
-# Register the component with required dependencies
+# Add NVS support if enabled
+# (Now included directly in the requires list)
+
+# Simple component registration with generated menu support
 idf_component_register(
-    SRCS 
-        "src/esp_menu.c"
-        "assets/user_actions.c"
-        "assets/user_graphic.c"
-        "generated/menu.c"
-    INCLUDE_DIRS 
-        "include"
-        "assets"
-        "generated"
-    REQUIRES 
-        esp_driver_i2c
-        esp_lcd
-        esp_lvgl_port
-        button
-        knob
-        nvs_flash
-        driver
+    SRCS ${srcs}
+    INCLUDE_DIRS "include" "assets" "generated"
+    REQUIRES ${requires}
 )
