--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,77 +1,125 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Build Example",
-            "type": "shell",
-            "command": "bash -c 'export SHELL=/bin/bash && source /home/phi/esp/v5.4.2/esp-idf/export.sh && cd examples/basic_menu && idf.py build'",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": {
-                "owner": "cpp",
-                "fileLocation": [
-                    "relative",
-                    "${workspaceFolder}/examples/basic_menu"
-                ],
-                "pattern": {
-                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                    "file": 1,
-                    "line": 2,
-                    "column": 3,
-                    "severity": 4,
-                    "message": 5
-                }
-            }
-        },
-        {
-            "label": "Clean Example",
-            "type": "shell",
-            "command": "bash -c 'export SHELL=/bin/bash && source /home/phi/esp/v5.4.2/esp-idf/export.sh && cd examples/basic_menu && idf.py clean'",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Flash Example",
-            "type": "shell",
-            "command": "bash -c 'export SHELL=/bin/bash && source /home/phi/esp/v5.4.2/esp-idf/export.sh && cd examples/basic_menu && idf.py flash'",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Monitor Example",
-            "type": "shell",
-            "command": "bash -c 'export SHELL=/bin/bash && source /home/phi/esp/v5.4.2/esp-idf/export.sh && cd examples/basic_menu && idf.py monitor'",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Flash and Monitor",
-            "type": "shell",
-            "command": "bash -c 'export SHELL=/bin/bash && source /home/phi/esp/v5.4.2/esp-idf/export.sh && cd examples/basic_menu && idf.py flash monitor'",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": []
-        },
-        {
-            "label": "Menuconfig",
-            "type": "shell",
-            "command": "bash -c 'export SHELL=/bin/bash && source /home/phi/esp/v5.4.2/esp-idf/export.sh && cd examples/basic_menu && idf.py menuconfig'",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": []
-        }
-    ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "Build Example",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py build",
+			"options": {
+				"cwd": "${workspaceFolder}",
+				"shell": {
+					"executable": "/bin/bash",
+					"args": [
+						"-lc"
+					]
+				}
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": {
+				"owner": "cpp",
+				"fileLocation": [
+					"relative",
+					"${workspaceFolder}/examples/basic_menu"
+				],
+				"pattern": {
+					"regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+					"file": 1,
+					"line": 2,
+					"column": 3,
+					"severity": 4,
+					"message": 5
+				}
+			}
+		},
+		{
+			"label": "Clean Example",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py clean",
+			"options": {
+				"cwd": "${workspaceFolder}",
+				"shell": {
+					"executable": "/bin/bash",
+					"args": [
+						"-lc"
+					]
+				}
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Flash Example",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py flash",
+			"options": {
+				"cwd": "${workspaceFolder}",
+				"shell": {
+					"executable": "/bin/bash",
+					"args": [
+						"-lc"
+					]
+				}
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Monitor Example",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py monitor",
+			"options": {
+				"cwd": "${workspaceFolder}",
+				"shell": {
+					"executable": "/bin/bash",
+					"args": [
+						"-lc"
+					]
+				}
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Flash and Monitor",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py flash monitor",
+			"options": {
+				"cwd": "${workspaceFolder}",
+				"shell": {
+					"executable": "/bin/bash",
+					"args": [
+						"-lc"
+					]
+				}
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Menuconfig",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py menuconfig",
+			"options": {
+				"cwd": "${workspaceFolder}",
+				"shell": {
+					"executable": "/bin/bash",
+					"args": [
+						"-lc"
+					]
+				}
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Build Example",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py build",
+			"group": "build"
+		},
+		{
+			"label": "Build Example Verbose Once",
+			"type": "shell",
+			"command": "source /home/phi/esp/v5.5/esp-idf/export.sh && cd ${workspaceFolder}/examples/basic_menu && idf.py build -v",
+			"group": "build"
+		}
+	]
 }
